# SlicerUniformRemesh

./: CMakeLists.txt  CTestConfig.cmake  README.md  SuperBuild.cmake
Libs/: CMakeLists.txt
Libs/vtkUniformRemesh/: CMakeLists.txt  vtkUniformRemeshConfigure.h.in  vtkUniformRemeshFilter.cxx  vtkUniformRemeshFilter.h
SuperBuild/: External_Eigen3.cmake  External_gpytoolbox.cmake  External_libigl.cmake
UniformRemesh/: CMakeLists.txt  UniformRemesh.cxx  UniformRemesh.py  UniformRemesh.xml  vtkUniformRemesh.cxx  vtkUniformRemesh.h
UniformRemesh/Resources/UI/: UniformRemesh.ui
